# autosre

./: .env.example  .gitignore  AGENTS.MD  README.md
docs/: README.md  a2a_development.md  architecture.md  deployment_patterns.md  local_running.md  observability_queries.md
o11y-agent/: README.md  deploy.py  pyproject.toml  requirements.txt
o11y-agent/app/: __init__.py  a2a_server.py  agent.json  agent.py  agent_engine_app.py
scratch/: check_env.py  list_engines.py
scripts/: deploy.py  deploy_all.sh  deploy_o11y.sh  setup_iam.sh
sre-helper/: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt  run_a2a_test.py
sre-helper/app/: a2a_server.py  agent.py  agent_engine_app.py
sre-helper/app/app_utils/: config.py  typing.py
sre-helper/deployment/: deploy.py
sre-helper/sre_helper/: agent.py
sre-helper/sre_helper/app_utils/: config.py  telemetry.py  typing.py
sre-helper/tests/: conftest.py
sre-helper/tests/eval/evalsets/: README.md  basic.evalset.json
sre-helper/tests/integration/: test_a2a.py  test_agent.py  test_agent_engine_app.py  test_mcp.py
